@@ -54,6 +54,7 @@ struct game games[] = {
     init_maps           : quake_init_maps,
     has_map             : quake_has_map,
     cmd_or_dir_changed  : q1_cmd_or_dir_changed,
+    update_prefs        : q1_update_prefs,
     pd                  : &q1_private,
     main_mod            : stringlist000,
     command             : stringlist001,
@@ -81,6 +82,7 @@ struct game games[] = {
     init_maps           : quake_init_maps,
     has_map             : quake_has_map,
     cmd_or_dir_changed  : qw_cmd_or_dir_changed,
+    update_prefs        : qw_update_prefs,
     pd                  : &qw_private,
     main_mod            : stringlist002,
     command             : stringlist003,
@@ -110,6 +112,7 @@ struct game games[] = {
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
     cmd_or_dir_changed  : q2_cmd_or_dir_changed,
+    update_prefs        : q2_update_prefs,
     pd                  : &q2_private,
     main_mod            : stringlist004,
     command             : stringlist005,
@@ -138,6 +141,7 @@ struct game games[] = {
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : q3_update_prefs,
     default_home        : "~/.q3a",
     pd                  : &q3_private,
     main_mod            : stringlist006,
@@ -167,6 +171,7 @@ struct game games[] = {
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : wo_update_prefs,
     default_home        : "~/.wolf",
     pd                  : &wolf_private,
     main_mod            : stringlist008,
@@ -196,6 +201,7 @@ struct game games[] = {
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : et_update_prefs,
     default_home        : "~/.etwolf",
     pd                  : &wolfet_private,
     main_mod            : stringlist010,
@@ -225,7 +231,7 @@ struct game games[] = {
     arch_identifier     : "si_version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
-    cmd_or_dir_changed  : doom3_cmd_or_dir_changed,
+    update_prefs        : doom3_update_prefs,
     default_home        : "~/.doom3",
     pd                  : &doom3_private,
     main_mod            : stringlist012,
@@ -252,6 +258,7 @@ struct game games[] = {
     arch_identifier     : "version",
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : ef_update_prefs,
     main_mod            : stringlist014,
   },
   {
@@ -402,6 +409,7 @@ struct game games[] = {
     save_info           : quake_save_info,
     arch_identifier     : "linux",
     identify_os         : t2_identify_os,
+    update_prefs        : tribes2_update_prefs,
     command             : stringlist017,
   },
   {
@@ -480,7 +488,7 @@ struct game games[] = {
     save_info           : quake_save_info,
     init_maps           : unreal_init_maps,
     has_map             : unreal_has_map,
-    cmd_or_dir_changed  : ut2004_cmd_or_dir_changed,
+    update_prefs        : ut2004_update_prefs,
     default_home        : "~/.ut2004",
     pd                  : &ut2004_private,
     command             : stringlist020,
@@ -648,6 +656,7 @@ struct game games[] = {
     get_mapshot         : q3_get_mapshot,
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : cod_update_prefs,
     pd                  : &cod_private,
     main_mod            : stringlist029,
     command             : stringlist030,
@@ -708,6 +717,7 @@ struct game games[] = {
     get_mapshot         : q3_get_mapshot,
     identify_cpu        : identify_cpu,
     identify_os         : identify_os,
+    update_prefs        : jk3_update_prefs,
     pd                  : &jk3_private,
     main_mod            : stringlist032,
     command             : stringlist033,
