@@ -26,6 +26,7 @@
 	<identify_os/>
 	<command/>
 	<cmd_or_dir_changed/>
+	<update_prefs/>
 	<default_home/>
 	<main_mod/>
 	<pd/>
@@ -52,6 +53,7 @@
 	<command>nq-sgl</command>
 	<command>twilight-nq</command>
 	<cmd_or_dir_changed>q1_cmd_or_dir_changed</cmd_or_dir_changed>
+	<update_prefs>q1_update_prefs</update_prefs>
 	<main_mod>id1</main_mod>
 	<pd>q1_private</pd>
     </game>
@@ -81,6 +83,7 @@
 	<command>qw-client-sgl</command>
 	<command>twilight-qw</command>
 	<cmd_or_dir_changed>qw_cmd_or_dir_changed</cmd_or_dir_changed>
+	<update_prefs>qw_update_prefs</update_prefs>
 	<main_mod>qw</main_mod>
 	<main_mod>id1</main_mod>
 	<pd>qw_private</pd>
@@ -109,6 +112,7 @@
 	<identify_os>identify_os</identify_os>
 	<command>quake2</command>
 	<cmd_or_dir_changed>q2_cmd_or_dir_changed</cmd_or_dir_changed>
+	<update_prefs>q2_update_prefs</update_prefs>
 	<main_mod>baseq2</main_mod>
 	<pd>q2_private</pd>
     </game>
@@ -137,6 +141,7 @@
 	<command>quake3</command>
 	<command>q3</command>
 	<default_home>~/.q3a</default_home>
+	<update_prefs>q3_update_prefs</update_prefs>
 	<main_mod>demoq3</main_mod>
 	<main_mod>baseq3</main_mod>
 	<pd>q3_private</pd>
@@ -153,6 +158,7 @@
 	<config_is_valid>config_is_valid_generic</config_is_valid>
 	<command>wolf</command>
 	<default_home>~/.wolf</default_home>
+	<update_prefs>wo_update_prefs</update_prefs>
 	<main_mod>demomain</main_mod>
 	<main_mod>main</main_mod>
 	<main_mod>wolfmp</main_mod>
@@ -170,6 +176,7 @@
 	<config_is_valid>config_is_valid_generic</config_is_valid>
 	<command>et</command>
 	<default_home>~/.etwolf</default_home>
+	<update_prefs>et_update_prefs</update_prefs>
 	<main_mod>etmain</main_mod>
 	<pd>wolfet_private</pd>
     </game>
@@ -192,7 +199,7 @@
 	<get_mapshot>doom3_get_mapshot</get_mapshot>
 	<arch_identifier>si_version</arch_identifier>
 	<command>doom3</command>
-	<cmd_or_dir_changed>doom3_cmd_or_dir_changed</cmd_or_dir_changed>
+	<update_prefs>doom3_update_prefs</update_prefs>
 	<default_home>~/.doom3</default_home>
 	<main_mod>base</main_mod>
 	<pd>doom3_private</pd>
@@ -210,6 +217,7 @@
 	<init_maps>NULL</init_maps>
 	<has_map>NULL</has_map>
 	<get_mapshot>NULL</get_mapshot>
+	<update_prefs>ef_update_prefs</update_prefs>
 	<main_mod>BaseEF</main_mod>
     </game>
     <game>
@@ -331,6 +339,7 @@
 	<arch_identifier>linux</arch_identifier>
 	<identify_os>t2_identify_os</identify_os>
 	<command>tribes2</command>
+	<update_prefs>tribes2_update_prefs</update_prefs>
     </game>
     <game>
 	<type>HR_SERVER</type>
@@ -389,7 +398,7 @@
 	<icon>ut2004_xpm</icon>
 	<command>ut2004demo</command>
 	<command>ut2004</command>
-	<cmd_or_dir_changed>ut2004_cmd_or_dir_changed</cmd_or_dir_changed>
+	<update_prefs>ut2004_update_prefs</update_prefs>
 	<default_home>~/.ut2004</default_home>
 	<pd>ut2004_private</pd>
     </game>
@@ -493,6 +502,7 @@
 	<config_is_valid>config_is_valid_generic</config_is_valid>
 	<arch_identifier>NULL</arch_identifier>
 	<command>codmp</command>
+	<update_prefs>cod_update_prefs</update_prefs>
 	<main_mod>main</main_mod>
 	<pd>cod_private</pd>
     </game>
@@ -537,6 +547,7 @@
 	<config_is_valid>config_is_valid_generic</config_is_valid>
 	<arch_identifier>NULL</arch_identifier>
 	<command>jamp</command>
+	<update_prefs>jk3_update_prefs</update_prefs>
 	<main_mod>base</main_mod>
 	<pd>jk3_private</pd>
     </game>
